# tinymlops-pipeline-196-199

./: .bash_history  .gitignore  .python-version  .python_history  Dockerfile  Dockerfile_p  Makefile  README.md  test_duration.sh
.cache/matplotlib/: fontlist-v330.json
.nv/ComputeCache/: index
.nv/ComputeCache/6/f/: 4bc745e98539dd
Containers/: Dockerfile-train
Containers/pico/: Dockerfile
Containers/speech_commands/: Dockerfile  train.py
Containers/stm32/: Dockerfile  Makefile
Containers/train/: Dockerfile-gpu  Dockerfile-tf  docker-compose.yml  requirements.txt
application_deployment/raspberry-pi-pico/: README.md
application_deployment/raspberry-pi-pico/VWW_PICO/: Dockerfile  Makefile
application_deployment/raspberry-pi-pico/VWW_PICO/PICO_SPI_CAM/: README.md
application_deployment/stm32f746-discovery-board/: README.md
application_deployment/stm32f746-discovery-board/KWS_STM32/: CMakeLists.txt  Dockerfile  README.md
application_deployment/stm32f746-discovery-board/KWS_STM32/CubeMX/: .mxproject
application_deployment/stm32f746-discovery-board/KWS_STM32_TESTING/: .gitignore  CMakeLists.txt  Makefile
application_deployment/stm32f746g-discovery/KWS_STM32/: CMakeLists.txt  Dockerfile  README.md
application_deployment/stm32f746g-discovery/KWS_STM32/CubeMX/: Makefile
google_kws_streaming/: Dockerfile
google_kws_streaming/kws_streaming/: README.md  __init__.py  requirements.txt
google_kws_streaming/kws_streaming/colab/: 00_check_data.ipynb  01_train.ipynb  02_inference.ipynb  conv_batch_norm_folding.ipynb  conv_batch_norm_on_generated_data.ipynb  visualize_speech_feature.ipynb  visualize_training_validation_loss.ipynb
google_kws_streaming/kws_streaming/experiments/: kws_experiments_12_labels.md  kws_experiments_30k_12_labels.md  kws_experiments_35_labels.md  kws_experiments_paper_12_labels.md  kws_experiments_quantized_12_labels.md
google_kws_streaming/kws_streaming/layers/: __init__.py
google_kws_streaming/kws_streaming/models/: __init__.py
google_kws_streaming/kws_streaming/models_sub/: __init__.py  base_model.py  conv_model.py  conv_model_test.py  tflite_utils.py  utils.py
google_kws_streaming/kws_streaming/train/: __init__.py  base_parser.py  base_parser_test.py  convert.py  inference.py  model_train_eval.py  test.py  train.py  train_test.py
google_kws_streaming/models_data_v2_12_labels/bc_resnet_2/: flags.txt  model_summary.txt
model_training/ARM-ML-Zoo/keyword_spotting/: README.md
model_training/ARM-ML-Zoo/keyword_spotting/cnn_small/: .gitignore  cnn_quantized.tflite  convert_to_tflite.py  get_dataset.sh  recreate_model.sh
model_training/ARM-ML-Zoo/keyword_spotting/ds_cnn_small/: .gitignore  convert_to_tflite.py  ds_cnn_quantized.cpp  ds_cnn_quantized.tflite  recreate_model.sh  requirements.txt
model_training/MLPerf/training/: README.md
model_training/MLPerf/training/keyword_spotting/: .gitignore  arm_ds_cnn_quantized.tflite  arm_dscnn.cc  build_ds_cnn.sh  convert_custom.py  ds_cnn_data.cc  ds_cnn_quantized_datta.cpp  kws_util.py  make_model_c_file  train.py
model_training/MLPerf/training/visual_wake_words/: Dockerfile.txt  model_converter_b.py
model_training/Tensorflow/: README.md
model_training/Tensorflow/speech_commands/: .gitignore  README.md  custom_convert_tflite.py  custom_gen_features_c.py  custom_train_model.sh  generate_wavs.sh  make_audio_test_c_files.py  test_streaming.sh  testing.py  tiny_conv.cpp  tiny_conv_float.cpp  tiny_conv_on_off.cpp  tiny_embedding_conv.cpp  train.py  train_model.sh  wav_to_features.py  wav_to_features.sh
model_training/Tensorflow/speech_commands/features_c_files/: custom_format_files.py  no_filenames_checklist.txt  no_test_list.txt  yes_filenames_checklist.txt  yes_test_list.txt
model_training/Tensorflow/speech_commands/models/: float_model.tflite  model.tflite
model_training/Tensorflow/speech_commands/streaming_test/: streaming_test_labels.txt
model_training/Tensorflow/visual_wake_words/: .gitignore  context.py  trainer.py
pico/: Dockerfile
stm32f746g-discovery/: README.md
stm32f746g-discovery/KWS/: CMakeLists.txt  README.md
stm32f746g-discovery/KWS/Core/Src/: audio_loopback.c
stm32f746g-discovery/KWS/CubeMX/: hello_world.ioc
stm32f746g-discovery/KWS/KWS/Source/: debug_log.c  model_settings.cpp
stm32f746g-discovery/KWS_CPP/: .cproject  .mxproject  .project  KWS_CPP.ioc
stm32f746g-discovery/KWS_CPP/Core/Inc/: main.h  (+1 more)
stm32f746g-discovery/KWS_CPP/Debug/: KWS_CPP.elf  KWS_CPP.list  KWS_CPP.map  makefile  objects.list  sources.mk
stm32f746g-discovery/KWS_STM32/: CMakeLists.txt  Dockerfile  README.md
stm32f746g-discovery/KWS_STM32/Core/Inc/: main.h
stm32f746g-discovery/KWS_STM32/Core/Src/: audio_loopback.c  audio_rec.c  main.cpp
stm32f746g-discovery/KWS_STM32/Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery.h
stm32f746g-discovery/KWS_STM32/KWS/Include/: gen_micro_mutable_op_resolver.h  model_settings.h  recognize_commands.h
stm32f746g-discovery/KWS_STM32/KWS/Source/: audio_provider.cpp  command_responder.cpp  ds_cnn_quantized_data.cpp  feature_provider.cpp  main_functions.cpp  micro_features_micro_features_generator.cpp  model_settings.cpp  recognize_commands.cpp
stm32f746g-discovery/KWS_STM32/microspeech/Src/: audio_provider copy.cpp  audio_provider.cpp  command_responder.cpp
tflu-kws-cortex-m/Training/: README.md  data.py  ds_cnn_quantized.tflite  micronets_quantized.tflite  micronets_quantized_1.tflite  models.py  train.py  train_commands.txt
training/image_classification/: Dockerfile  Dockerfile.txt  model_converter.py  train.py
training/image_classification/trained_models/: trainedResnet.h5
training/keyword_spotting/: Dockerfile  build_ds_cnn.sh  build_ref.sh  build_td_cnn.sh  ds_cnn_quantized_data.cc  eval_quantized_model.py  kws_util.py  requirements.txt  train.py
training/keyword_spotting/trained_models/: ds_cnn.tflite  ds_cnn_2.h5  ds_cnn_2.tflite  ds_cnn_2_float32.tflite  ds_cnn_40epocs.h5  ds_cnn_40epocs.tflite  ds_cnn_40epocs_float32.tflite  kws_ref_model.h5  kws_ref_model.tflite  td_cnn.h5  td_cnn_float32.tflite
(+2206 files in other folders)
